--- a/gra-310-website/root-folder/index.html
+++ b/gra-310-website/root-folder/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css"><!--Link relay for css style sheet-->
     <link href="https://fonts.adobe.com/fonts/goudy-old-style#details-section+goudy-old-style-regular">
     <title>Pasta Amore</title><!--This is the title. The title contains the title on the main page of the website.-->
+    <meta name="google-site-verification" content="dbrclNzHXAEhSfgreQSHGo8wgHKB3MzKbnEzG9d9HmA" />
   <title>HTML Copyright Symbol</title>
   </head><!--This is the closing of the head. It contains the information not seen, but needed to make the website work.-->
   <body>
